@@ -1,3 +1,10 @@
+2005-04-25  Mark D. Baushke  <mdb@cvshome.org>
+
+	* configure.in: Add support for <pam/pam_appl.h> to allow
+	--enable-pam to work on MacOSX 10.2 and newer.
+	(Pach from Moriyoshi Koizumi <moriyoshi@at.wakwak.com>.)
+	* configure, config.h.in: Regenerated.
+	
 2005-04-20  Derek Price  <derek@ximbiot.com>
 
 	* NEWS: Note log overflow fix.
